2002-08-13  Keith Seitz  <keiths@redhat.com>

	* interps.c (_initialize_interpreter): Remove ability to set
	the interpreter. This could really undermine MI clients.
	* top.c (catcher): Don't worry about interpreter changes.

2002-08-12  Keith Seitz  <keiths@redhat.com>

	* interps.c (_initialize_interpreter): Add completer function
	to "set interpreter" command.

2002-08-12  Keith Seitz  <keiths@redhat.com>

	* interps.c: Run through gdb_indent.sh
	* interps.h: Ditto.

2002-08-08  Keith Seitz  <keiths@redhat.com>

	* infrun.c (handle_inferior_event): Add context_changed_event.
	* gdb-events.sh (context_hook): Removed comment.
	(context_changed): Add new event.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.

2002-07-25  Keith Seitz  <keiths@redhat.com>

	* stack.c (frame_command): If the frame level changed, issue
	a selected_frame_level_changed event.
	(up_command): Add selected_frame_level_changed event;
	(down_command): Likewise.

	* gdb-events.sh: Add selected_frame_level_changed event.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.
	
	* stack.c (print_frame_info_base): Always set current_source_symtab
	and current_source_line.

	* cli/cli-interp.c (cli_interpreter_exec): Pass from_tty=1 to
	gdb_execute_command.

2002-07-22  Keith Seitz  <keiths@redhat.com>

	* gdb-events.sh (register_changed_hook): Remove comment.
	(register_update): New event.
	* gdb-events.c: Regenerated.
	* gdb-events.h: Regenerated.

2002-07-22  Keith Seitz  <keiths@redhat.com>

	* valops.c (value_assign): Add register_update event notification
	for lval_register and lval_reg_frame_relative.

2002-06-24  Keith Seitz  <keiths@redhat.com>

	* Makefile.in (interps.o): Add gdb-events.h as a dependency.

	* gdb-events.sh (clear_gdb_event_hooks): New function.
	* gdb-events.c: Regenerate.
	* gdb-events.h: Regenerate.

	* cli-out.h (cli_out_set_stream): New function.
	* cli-out.c (cli_out_set_stream): New function.

	* interps.c: Include gdb-events.h.